<resources>
    <string name="app_name">ComedorUACM</string>
    <string name="uni">UNIVERSIDAD AUTONOMA DE LA CIUDAD DE MEXICO</string>
    <string name="boton_Alumno">COMENZALES</string>
    <string name="boton_Enacargado">ENCARGADO</string>
    <string name="hint_Nplantel">Nombre Plantel</string>
    <string name="hint_NId_plantel">id_plantel</string>
    <string name="hint_nombrePlatillo">Nombre del platilo</string>
    <string name="hint_horario">Nombre del Horario</string>
    <string name="hint_hora_inicial">hora de inicio</string>
    <string name="hint_minuto_inicial">minuto de inicio</string>
    <string name="hint_hora_final">hora que concluye el servicio</string>
    <string name="hint_minuto_final">minuto final</string>
    <string name="hint_Ingrediente">Ingrediente</string>
    <string name="seleccionaOpcion">Selecciona opción</string>
    <string name="btn_menu">Menu</string>
    <string name="btn_platillo">Platillo</string>
    <string name="btn_ingrediente">Ingrediente</string>
    <string name="btn_agregar_ingrediente">Agregar ingrediente</string>
    <string name="btn_agregar_horario">Agregar Horario</string>
    <string name="btn_horario">Horario</string>

</resources>